--- a/sitio/src/views/detail.ejs
+++ b/sitio/src/views/detail.ejs
@@ -16,7 +16,7 @@
                         <li><a href="/">home</a>
                             <span>></span>
                         </li>
-                        <li><a href="/products/categorias/<%= producto.category.name %> ">
+                        <li><a href="/products/categorias/<%= producto.category.id %> ">
                                 <%= producto.category.name %>
                             </a> > </li>
                         <li><a href="#">producto</a></li>
@@ -57,26 +57,32 @@
                                 <span class="product-cuota">En <%= producto.cuotas %>x $ <%= (producto.price /
                                             producto.cuotas).toFixed(0) %></span>
                             </div>
-                            <div class="product-envio">
+                            <!-- <div class="product-envio">
                                 <i class="fas fa-truck"></i>
                                 <span><a href="#">calcular envio</a></span>
                                 <div>
                                     <span class="p-cantidad">cantidad: 1 unidad </span> <span>(99 disponibles)</span>
                                 </div>
-                            </div>
-                            <div class="product-financiamiento mb-3">
+                            </div> -->
+                            <!-- <div class="product-financiamiento mb-3">
                                 <button class="product-ver-opciones">
                                     <i class="far fa-credit-card"></i>
                                     Ver más opciones de financiación
                                 </button>
                             </div>
-                        </div>
+                        </div> -->
 
-                        <div class="product-comprar-ahora">
+                        <!-- <div class="product-comprar-ahora">
                             <button class="boton-compra">Comprar ahora</button>
-                        </div>
+                        </div> -->
                         <div class="product-carrito">
-                            <button class="product-carrito-boton">Agregar al carrito</button>
+                        <% if (locals.userLogin){ %>
+                                <a href="#" class="boton-compra" onclick = "agregarItem(event,'<%= producto.id %>')">Agregar al carrito</a>
+                        <% } else{%>
+                            <a href="#" class="boton-compra" onclick = "cerrarsession()">Agregar al carrito</a>
+                        <% } %>
+                            
+                            <!-- <button class="boton-compra">Agregar al carrito</button> -->
                         </div>
 
                     </div>
@@ -109,10 +115,13 @@
             </main>
 
             <!-- Footer -->
+            <script src = "https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
             <%- include('./partials/footer.ejs') %>
+            <%- include('./partials/scripts.ejs') %>
            <script src = "/javascripts/glider.js"></script>  <!-- va primer glider.js-->
             <script src = "/javascripts/productDetail.js"></script>
 
+              
 
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
                     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
