--- a/sitio/src/views/faq.ejs
+++ b/sitio/src/views/faq.ejs
@@ -127,6 +127,7 @@
 
             <!-- Footer -->
             <%- include('./partials/footer.ejs') %>
+            <%- include('./partials/scripts.ejs') %>
 
 
                 <!-- Optional JavaScript -->
