--- a/sitio/src/views/home.ejs
+++ b/sitio/src/views/home.ejs
@@ -8,7 +8,6 @@
 
         <!-- h e a d e r -->
         <%- include('./partials/header.ejs') %>
-
             <main class="main">
 
                 <!--   C a r o u s e l     -->
@@ -68,6 +67,7 @@
             
             <!-- Footer -->
             <%- include('./partials/footer.ejs') %>
+            <%- include('./partials/scripts.ejs') %>
 
                 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
                     integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
