--- a/sitio/src/views/nosotros.ejs
+++ b/sitio/src/views/nosotros.ejs
@@ -180,6 +180,7 @@
 
             <!-- Footer -->
             <%- include('./partials/footer.ejs') %>
+            <%- include('./partials/scripts.ejs') %>
 
 
                 <!-- Optional JavaScript -->
