--- a/sitio/src/views/resultSearch.ejs
+++ b/sitio/src/views/resultSearch.ejs
@@ -61,7 +61,8 @@
  
 	 <!-- Footer -->
 	 <%- include('./partials/footer.ejs') %>
- 
+    <%- include('./partials/scripts.ejs') %>
+	
  
 		 <!-- Option 1: Bootstrap Bundle with Popper -->
 		 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
