--- a/sitio/public/stylesheets/detail.css
+++ b/sitio/public/stylesheets/detail.css
@@ -239,8 +239,8 @@ main .product-precio-cuota .product-precio {
 
 .boton-compra {
     display: block;
-    background-color: rgb(153, 149, 149);
-    border-radius: 3px;
+    background-color: #007bff;
+    border-radius: 0px;
     width: 100%;
     height: 50px;
     margin: center;
@@ -321,6 +321,9 @@ main .product-precio-cuota .product-precio {
         padding: 10px;
     }
     .contenedora-product-descrip {
+        border-radius:3px;
+        border:1px solid #D3D7DA;
+        padding:135px 10px;
         width: 10%;
     }
     .contenedor-precio-opcion {
@@ -353,17 +356,28 @@ main .product-precio-cuota .product-precio {
         border-color: 1px red solid;
     }
     .boton-compra {
-        border-radius: 0px;
+        transition:0.5s;
+        border-radius:0px;
+        padding:10px;
+        /* border-radius: 0px; */
+        background-color: #007bff;
+        color: #fff;
     }
-    .product-carrito-boton {
+    .boton-compra:hover {
+        background-color: #034B99;
+        color: #fff;
+    }
+    /* .product-carrito-boton {
+        padding:10px;
         display: block;
         width: 100%;
         height: 50px;
         margin: center;
         text-align: center;
-        background-color: #fafafa;
-        border: solid 1px #a8a8a8;
-    }
+        background-color: #007bff;
+        color: #fff; */
+        /* border: solid 1px #a8a8a8; */
+    /* } */
     .contenedora-img-list {
         display: block;
     }
