--- a/sitio/public/stylesheets/footer.css
+++ b/sitio/public/stylesheets/footer.css
@@ -1,3 +1,7 @@
+html{
+  height:100%;
+}
+
 footer {
     width: 100%;
     background-color: white;
@@ -7,7 +11,7 @@ footer {
     width: 100%;
     min-width: 320px;
     margin: auto;
-    padding: 10px;
+    padding: 10px 10px 0px 10px;
     justify-content: center;
   }
   
@@ -156,15 +160,18 @@ footer {
   
   .container-footer2 {
     width: 100%;
-    background-color: rgb(240, 235, 235);
+    border-top:1px solid grey;
+    /* border-bottom:1px solid grey; */
+    /* background-color: rgb(240, 235, 235); */
   }
   
   .container-footer2a {
+    background-color:#fff;
     text-align: center;
     max-width: 300px;
     margin: auto;
     flex-wrap: wrap;
-    padding: 20px;
+    padding: 10px;
   }
   
   .container-footer2 a {
