mejoras de validaciones en register

--- a/sitio/src/views/EditPerfil.ejs
+++ b/sitio/src/views/EditPerfil.ejs
@@ -94,6 +94,8 @@
                             <div class="contenedor-label">
                                 <input value="<%= session.email%>" type="email" name="correo" id="correo"
                                     style="display: none;">
+                                    <input value="<%= session.rol%>" type="text" name="rol" id="rol"
+                                    style="display: none;">
                             </div>
 
                             <div class="contenedor-boton">
