--- a/sitio/src/views/home.ejs
+++ b/sitio/src/views/home.ejs
@@ -14,13 +14,13 @@
                 <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="/images/op.jpg" class="d-block w-100 slider-img" alt="...">
+                            <img src="/images/banner2.jpg" class="d-block w-100 slider-img" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="/images/n1.jpg" class="d-block w-100 slider-img" alt="...">
+                            <img src="/images/banner12.jpg" class="d-block w-100 slider-img" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="/images/db1.jpg" class="d-block w-100 slider-img" alt="...">
+                            <img src="/images/banner3.jpg" class="d-block w-100 slider-img" alt="...">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
