--- a/sitio/src/views/nosotros.ejs
+++ b/sitio/src/views/nosotros.ejs
@@ -26,8 +26,9 @@
                     <div class="card">
                         <div class="card-header" id="headingOne">
                             <h2 class="mb-0">
-                                <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse"
-                                    data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                <button class="btn-link btn-block text-left boton-nosotros" type="button"
+                                    data-toggle="collapse" data-target="#collapseOne" aria-expanded="true"
+                                    aria-controls="collapseOne">
                                     Historia
                                 </button>
                             </h2>
@@ -46,7 +47,7 @@
                     <div class="card">
                         <div class="card-header" id="headingTwo">
                             <h2 class="mb-0">
-                                <button class="btn btn-link btn-block text-left collapsed" type="button"
+                                <button class="btn-link btn-block text-left collapsed boton-nosotros" type="button"
                                     data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false"
                                     aria-controls="collapseTwo">
                                     Misión
@@ -72,7 +73,7 @@
                     <div class="card">
                         <div class="card-header" id="headingThree">
                             <h2 class="mb-0">
-                                <button class="btn btn-link btn-block text-left collapsed" type="button"
+                                <button class="btn-link btn-block text-left collapsed boton-nosotros" type="button"
                                     data-toggle="collapse" data-target="#collapseThree" aria-expanded="false"
                                     aria-controls="collapseThree">
                                     Visión
@@ -96,16 +97,16 @@
                         </div>
                     </div>
                     <div class="card">
-                        <div class="card-header" id="headingThree">
+                        <div class="card-header" id="headingFour">
                             <h2 class="mb-0">
-                                <button class="btn btn-link btn-block text-left collapsed" type="button"
-                                    data-toggle="collapse" data-target="#collapseThree" aria-expanded="false"
-                                    aria-controls="collapseThree">
+                                <button class="btn-link btn-block text-left collapsed boton-nosotros" type="button"
+                                    data-toggle="collapse" data-target="#collapseFour" aria-expanded="false"
+                                    aria-controls="collapseFour">
                                     Valores
                                 </button>
                             </h2>
                         </div>
-                        <div id="collapseThree" class="collapse" aria-labelledby="headingThree"
+                        <div id="collapseFour" class="collapse" aria-labelledby="headingFour"
                             data-parent="#accordionExample">
                             <div class="card-body">
 
@@ -116,8 +117,10 @@
                                     cliente.</p>
                                 <p>HONESTIDAD: Somos una empresa seria que responde, verdaderamente con su función sin
                                     causar daño y de igual manera algo ilegal.</p>
-                                <p> LEALTAD: Somos cumplidores de nuestras palabras y actos que realice la empresa Akamaru en cualquier circunstancia. </p>
-                                <p> HUMILDAD: Servimos a todo tipo de cliente sin importar, de quien se trate .Sera atendido de la mejor forma y de igual manera será tratado. Siempre pensando en los
+                                <p> LEALTAD: Somos cumplidores de nuestras palabras y actos que realice la empresa
+                                    Akamaru en cualquier circunstancia. </p>
+                                <p> HUMILDAD: Servimos a todo tipo de cliente sin importar, de quien se trate .Sera
+                                    atendido de la mejor forma y de igual manera será tratado. Siempre pensando en los
                                     clientes. </p>
 
                             </div>
@@ -125,16 +128,16 @@
                     </div>
 
                     <div class="card">
-                        <div class="card-header" id="headingFour">
+                        <div class="card-header" id="headingFive">
                             <h2 class="mb-0">
-                                <button class="btn btn-link btn-block text-left collapsed" type="button"
-                                    data-toggle="collapse" data-target="#collapseFour" aria-expanded="false"
-                                    aria-controls="collapseFour">
-                                   Equipo
+                                <button class="btn-link btn-block text-left collapsed boton-nosotros" type="button"
+                                    data-toggle="collapse" data-target="#collapseFive" aria-expanded="false"
+                                    aria-controls="collapseFive">
+                                    Equipo
                                 </button>
                             </h2>
                         </div>
-                        <div id="collapseFour" class="collapse" aria-labelledby="headingFour"
+                        <div id="collapseFive" class="collapse" aria-labelledby="headingFive"
                             data-parent="#accordionExample">
                             <div class="card-body">
 
@@ -143,32 +146,43 @@
                                     Full Stack developer.<br>
                                     Moreno, Buenos Aires.<br>
                                     Autodidacta de la programación, amante de la música y los deportes.<br>
-                                    Perfil GITHUB: <a href="https://github.com/GabrielAmestoy" target="_blank">https://github.com/GabrielAmestoy </a> </p>
-                                 </p>
+                                    Perfil GITHUB: <a href="https://github.com/GabrielAmestoy"
+                                        target="_blank">https://github.com/GabrielAmestoy </a> </p>
+                                </p>
 
-                                 <h3>DOMINGUEZ MARIA:</h3>
+                                <h3>DOMINGUEZ MARIA:</h3>
                                 <p> 23 años.<br>
                                     Full Stack developer.<br>
                                     Pilar, Buenos Aires.<br>
-                                    Soy una persona muy curiosa, me gusta cocinar, leer, estudiar y viajar para conocer nuevos lugares.<br>
-                                    Perfil GITHUB: <a href="https://github.com/MariaDominguez8" target="_blank">https://github.com/MariaDominguez8 </a> </p>
-                                 </p>
+                                    Soy una persona muy curiosa, me gusta cocinar, leer, estudiar y viajar para conocer
+                                    nuevos lugares.<br>
+                                    Perfil GITHUB: <a href="https://github.com/MariaDominguez8"
+                                        target="_blank">https://github.com/MariaDominguez8 </a> </p>
+                                </p>
 
-                                 <h3>PARODI, SOFIA:</h3>
+                                <h3>PARODI, SOFIA:</h3>
                                 <p> 21 años.<br>
                                     Full Stack developer.<br>
                                     San Martín, Buenos Aires.<br>
                                     Amante de los gatitos, fanática de Star Wars y One Piece.<br>
-                                    Perfil GITHUB: <a href="https://github.com/SofiaParodi" target="_blank">https://github.com/SofiaParodi </a> </p>
-                                  </p>
+                                    Perfil GITHUB: <a href="https://github.com/SofiaParodi"
+                                        target="_blank">https://github.com/SofiaParodi </a> </p>
+                                </p>
 
-                                  <h3>SINCHES HUGO IVÁN :</h3>
+                                <h3>SINCHES HUGO IVÁN :</h3>
                                 <p> 35 años.<br>
-                                    Full Stack developer. <br>                               
-                                    Comodoro Rivadavia, Chubut.  <br>                              
-                                    Soy una persona dedicada y tengo una hija. Me gusta la programación y todo lo relacionado a la tecnologia. Gracias a mi iniciativa autodidacta, considero que puedo aportar valor al proyecto y seguir desarrollándome profesionalmente. Como persona organizada y con una gran motivación, soy capaz de adaptarme a cualquier circunstancia y dar siempre lo mejor de mí en cualquier proyecto, al mismo tiempo que me esfuerzo por trabajar en equipo y fomentar valores como los del compañerismo.  <br>
-                                    Perfil GITHUB: <a href="https://github.com/Sinches-Hugo-Ivan" target="_blank">https://github.com/Sinches-Hugo-Ivan </a> </p>
-                               
+                                    Full Stack developer. <br>
+                                    Comodoro Rivadavia, Chubut. <br>
+                                    Soy una persona dedicada y tengo una hija. Me gusta la programación y todo lo
+                                    relacionado a la tecnologia. Gracias a mi iniciativa autodidacta, considero que
+                                    puedo aportar valor al proyecto y seguir desarrollándome profesionalmente. Como
+                                    persona organizada y con una gran motivación, soy capaz de adaptarme a cualquier
+                                    circunstancia y dar siempre lo mejor de mí en cualquier proyecto, al mismo tiempo
+                                    que me esfuerzo por trabajar en equipo y fomentar valores como los del compañerismo.
+                                    <br>
+                                    Perfil GITHUB: <a href="https://github.com/Sinches-Hugo-Ivan"
+                                        target="_blank">https://github.com/Sinches-Hugo-Ivan </a> </p>
+
 
                             </div>
                         </div>
@@ -180,20 +194,20 @@
 
             <!-- Footer -->
             <%- include('./partials/footer.ejs') %>
-            <%- include('./partials/scripts.ejs') %>
+                <%- include('./partials/scripts.ejs') %>
 
 
-                <!-- Optional JavaScript -->
-                <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-                <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-                    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-                    crossorigin="anonymous"></script>
-                <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-                    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-                    crossorigin="anonymous"></script>
-                <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-                    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-                    crossorigin="anonymous"></script>
+                    <!-- Optional JavaScript -->
+                    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+                    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+                        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+                        crossorigin="anonymous"></script>
+                    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+                        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+                        crossorigin="anonymous"></script>
+                    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+                        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+                        crossorigin="anonymous"></script>
 
 
 
