--- a/sitio/public/stylesheets/faq.css
+++ b/sitio/public/stylesheets/faq.css
@@ -1,3 +1,13 @@
+.boton-faq{
+  color:#373839;
+  padding:16px;
+  font-size:22px;
+  text-decoration:none;
+  display:block;
+  margin:auto;
+  border:none;
+  background-color:#fafafa;
+}
 .centrado{
   margin:auto;
   display:block;
