--- a/sitio/public/stylesheets/style.css
+++ b/sitio/public/stylesheets/style.css
@@ -14,6 +14,7 @@
 @import url('./vistaPerfil.css');
 @import url('./error.css');
 @import url('./nosotros.css');
+@import url('./faq.css');
 @import url('./cine.css');
 @import url('./peliculas.css');
 @import url('./productEdit.css');
