--- a/sitio/src/views/faq.ejs
+++ b/sitio/src/views/faq.ejs
@@ -26,7 +26,7 @@
                     <div class="card">
                         <div class="card-header" id="headingOne">
                             <h2 class="mb-0">
-                                <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse"
+                                <button class="btn-link btn-block text-left boton-faq" type="button" data-toggle="collapse"
                                     data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                                     ¿Tienen local?
                                 </button>
@@ -36,16 +36,20 @@
                         <div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
                             data-parent="#accordionExample">
                             <div class="card-body">
-                                <p>Estamos  ubicados en Calle falsa 123, Buenos Aires, Argentina está situado en el barrio de San Nicolás, a cuadras del obelisco, se puede ingresar a comprar en la tienda sin turno previo, abren todos los días de 12hs a 17hs excepto los domingos, ahí van a poder encontrar todos nuestros productos.
+                                <p>Estamos ubicados en Calle falsa 123, Buenos Aires, Argentina está situado en el
+                                    barrio de San Nicolás, a cuadras del obelisco, se puede ingresar a comprar en la
+                                    tienda sin turno previo, abren todos los días de 12hs a 17hs excepto los domingos,
+                                    ahí van a poder encontrar todos nuestros productos.
 
-                                    También pueden elegir retirar por nuestro punto de entrega en la zona de Almagro, Buenos Aires.</p>
+                                    También pueden elegir retirar por nuestro punto de entrega en la zona de Almagro,
+                                    Buenos Aires.</p>
                             </div>
                         </div>
                     </div>
                     <div class="card">
                         <div class="card-header" id="headingTwo">
                             <h2 class="mb-0">
-                                <button class="btn btn-link btn-block text-left collapsed" type="button"
+                                <button class="btn-link btn-block text-left collapsed boton-faq" type="button"
                                     data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false"
                                     aria-controls="collapseTwo">
                                     ¿Qué métodos de envío usan?
@@ -55,14 +59,15 @@
                         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
                             data-parent="#accordionExample">
                             <div class="card-body">
-                                <p>Trabajamos con Correo Argentino a todo el pais y tenemos envíos por moto dentro de CABA.</p>
+                                <p>Trabajamos con Correo Argentino a todo el pais y tenemos envíos por moto dentro de
+                                    CABA.</p>
                             </div>
                         </div>
                     </div>
                     <div class="card">
                         <div class="card-header" id="headingThree">
                             <h2 class="mb-0">
-                                <button class="btn btn-link btn-block text-left collapsed" type="button"
+                                <button class="btn-link btn-block text-left collapsed boton-faq" type="button"
                                     data-toggle="collapse" data-target="#collapseThree" aria-expanded="false"
                                     aria-controls="collapseThree">
                                     ¿Cuál es el precio del envío?
@@ -72,40 +77,21 @@
                         <div id="collapseThree" class="collapse" aria-labelledby="headingThree"
                             data-parent="#accordionExample">
                             <div class="card-body">
-                                <p> Depende del servicio elegido, si estan dentro de CABA sale $300, mediante Correo Argentino sale $500 a domicilio, o $300 a sucursal .Para envios a todo el pais consultar <a href="https://www.correoargentino.com.ar/servicios/paqueteria/encomienda-correo-clasica" target="_blank">acá  </p>
+                                <p> Depende del servicio elegido, si estan dentro de CABA sale $300, mediante Correo
+                                    Argentino sale $500 a domicilio, o $300 a sucursal .Para envios a todo el pais
+                                    consultar <a
+                                        href="https://www.correoargentino.com.ar/servicios/paqueteria/encomienda-correo-clasica"
+                                        target="_blank">acá </a> </p>
                             </div>
                         </div>
                     </div>
-                    <div class="card">
-                        <div class="card-header" id="headingThree">
-                            <h2 class="mb-0">
-                                <button class="btn btn-link btn-block text-left collapsed" type="button"
-                                    data-toggle="collapse" data-target="#collapseThree" aria-expanded="false"
-                                    aria-controls="collapseThree">
-                                    ¿En qué sucursales de Correo Argentino puedo recibir mi pedido?
-                                </button>
-                            </h2>
-                        </div>
-                        <div id="collapseThree" class="collapse" aria-labelledby="headingThree"
-                            data-parent="#accordionExample">
-                            <div class="card-body">
-
-                                <p> Pueden consultar la sucursal más cercana a su domicilio <a href="https://www.correoargentino.com.ar/formularios/sucursales" target="_blank">acá </a>
-
-                                    Recuerden escribir la dirección de la sucursal elegida en los datos de envío</p>
-                              
-
-                            </div>
-                        </div>
-                    </div>
-
                     <div class="card">
                         <div class="card-header" id="headingFour">
                             <h2 class="mb-0">
-                                <button class="btn btn-link btn-block text-left collapsed" type="button"
+                                <button class="btn-link btn-block text-left collapsed boton-faq" type="button"
                                     data-toggle="collapse" data-target="#collapseFour" aria-expanded="false"
                                     aria-controls="collapseFour">
-                                    ¿Cuánto demora el envío?
+                                    ¿En qué sucursales de Correo Argentino puedo recibir mi pedido?
                                 </button>
                             </h2>
                         </div>
@@ -113,9 +99,36 @@
                             data-parent="#accordionExample">
                             <div class="card-body">
 
-                                
-                                <p> Depende del servicio elegido, pero generalmente entre 3 a 7 días hábiles luego de ser despachado, si eligen envío por moto se coordina por mail fecha y horario que necesiten que llegue el pedido </p>
-                                 </p>
+                                <p> Pueden consultar la sucursal más cercana a su domicilio <a
+                                        href="https://www.correoargentino.com.ar/formularios/sucursales"
+                                        target="_blank">acá </a>
+
+                                    Recuerden escribir la dirección de la sucursal elegida en los datos de envío</p>
+
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-header" id="headingFive">
+                            <h2 class="mb-0">
+                                <button class="btn-link btn-block text-left collapsed boton-faq" type="button"
+                                    data-toggle="collapse" data-target="#collapseFive" aria-expanded="false"
+                                    aria-controls="collapseFive">
+                                    ¿Cuánto demora el envío?
+                                </button>
+                            </h2>
+                        </div>
+                        <div id="collapseFive" class="collapse" aria-labelledby="headingFive"
+                            data-parent="#accordionExample">
+                            <div class="card-body">
+
+
+                                <p> Depende del servicio elegido, pero generalmente entre 3 a 7 días hábiles luego de
+                                    ser despachado, si eligen envío por moto se coordina por mail fecha y horario que
+                                    necesiten que llegue el pedido </p>
+                                </p>
 
                             </div>
                         </div>
@@ -127,20 +140,20 @@
 
             <!-- Footer -->
             <%- include('./partials/footer.ejs') %>
-            <%- include('./partials/scripts.ejs') %>
+                <%- include('./partials/scripts.ejs') %>
 
 
-                <!-- Optional JavaScript -->
-                <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-                <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-                    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-                    crossorigin="anonymous"></script>
-                <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-                    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-                    crossorigin="anonymous"></script>
-                <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-                    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-                    crossorigin="anonymous"></script>
+                    <!-- Optional JavaScript -->
+                    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+                    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+                        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+                        crossorigin="anonymous"></script>
+                    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+                        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+                        crossorigin="anonymous"></script>
+                    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+                        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+                        crossorigin="anonymous"></script>
 
 
 
