--- a/sitio/public/stylesheets/home.css
+++ b/sitio/public/stylesheets/home.css
@@ -5,7 +5,7 @@
     display: block;
     width: 100%;
     height: 200px;
-    object-fit:cover;
+    /* object-fit:cover; */
 }
 
 /*---------GALERIA DE PRODUCTOS---------*/
@@ -46,6 +46,7 @@
 }
 
 .main .conteiner-products .product .product-description{ /*cambios en margin y padinng de p span y description*/
+    display: grid;
     font-size: 0.6em;
     width: 100%;
     height: 100px;
@@ -54,16 +55,17 @@
     border-left: 1px #000 solid;
     border-right: 1px #000 solid;
     border-bottom:  1px #000 solid;
+    
 }
 .main h3.name-product{
-    font-size: 1.3em;
+    font-size: 1.5em;
     color:#686868;
     margin: auto;
 
 }
 .main p{
     color: black;
-    font-size: 1.1em;
+    font-size: 1.5em;
     font-weight: bold;
     margin: auto;
 }
@@ -107,5 +109,12 @@
     }
     .main .conteiner-products{
         width: 90%;
+    }
+    @media(min-width:1200px){
+        .main .slider-img{
+            /* object-fit:contain;
+            width: 100%; */
+            height: 550px;
+        }
     }
 }
