--- a/sitio/public/stylesheets/resultSearch.css
+++ b/sitio/public/stylesheets/resultSearch.css
@@ -50,6 +50,7 @@
 }
 
 .conteiner-products .product .product-description{
+  display: grid;
   width: 100%;
   height: 100px;
   text-align: center;
@@ -59,14 +60,14 @@
   border-bottom:  1px #000 solid;
 }
 .name-product{
-  font-size: 1.3em;
+  font-size: 1em;
   color:#686868;
   margin: auto;
 
 }
 .product p{
   color: black;
-  font-size: 1.1em;
+  font-size: 14px;
   font-weight: bold;
   margin: auto;
 }
